--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
+pip==25.1.1
 streamlit==1.39.0
-torch==2.4.1+cpu
-torchvision==0.19.1+cpu
-torchaudio==2.4.1+cpu
+torch==2.6.0+cpu
+torchvision==0.21.0+cpu
+torchaudio==2.6.0+cpu
 transformers==4.44.2
 pillow==10.4.0
 gtts==2.5.3
